cabal-version:      3.4
name:               testing
version:            0.1.0.0
author:             Ben Gamari
maintainer:         ben@smart-cactus.org

library sublib
    extra-libraries:  stdc++
    pkgconfig-depends: zlib
    default-language: Haskell2010

library
    extra-libraries:  stdc++
    pkgconfig-depends: zlib
    default-language: Haskell2010

executable testing
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
